Add: color for body

--- a/webapp/static/sass/_settings.sass
+++ b/webapp/static/sass/_settings.sass
@@ -2,8 +2,16 @@
 *
   box-sizing: border-box
 
+body
+  background-color: $beige-dark
+
 img
   max-width: 100%
 
 h1, h2, h3, p
   margin: 0
+
+ul, li
+  margin: 0
+  padding-left: 0
+  list-style-type: none
