Add: adaptive header for 1200, 992 width

--- a/webapp/static/sass/_media.sass
+++ b/webapp/static/sass/_media.sass
@@ -1,7 +1,42 @@
-// @media (max-width: 1200px)
+@media (max-width: 1200px)
+  .header
+    &-wrapper
+      max-width: 960px
 
-// @media (max-width: 992px)
+@media (max-width: 992px)
+  .header
+    &-wrapper
+      max-width: 720px
 
-// @media (max-width: 768px)
+  .nav
+    &__item
+      margin-right: 20px
+    &__link
+      font-size: 15px
+    
+  .button
+    &-login
+      margin-left: 20px
+
+@media (max-width: 768px)
+  // Кнопка перехода в меню
+  // .menu
+  //   &-button
+  //     &--mobile
+  //       &--hidden
+  //         display: flex
+  //         width: 22px
+  //         height: 18px
+  //         padding: 0
+  //         align-items: center
+  //         justify-content: space-between
+  //         flex-direction: column
+  //         border: none
+  //         background-color: transparent
+  //         cursor: pointer
+  //     &__line
+  //       width: 100%
+  //       height: 2px
+  //       background-color: $ruby-color
 
 // @media (max-width: 576px)
