--- a/webapp/templates/base.html
+++ b/webapp/templates/base.html
@@ -17,8 +17,16 @@
   <body>
     <header class="header">
       <div class="header-wrapper">
-        <a href="#" class="logo">ProgrammigBooks</a>
-        <!-- /.logo -->
+        <div class="menu">
+          <a href="#" class="menu-logo">ProgrammigBooks</a>
+          <!-- /.logo -->
+          <button class="menu-button menu-button--mobile--hidden">
+            <span class="menu-button__line"></span>
+            <span class="menu-button__line"></span>
+            <span class="menu-button__line"></span>
+          </button>
+        </div>
+        <!-- /.logo-menu -->
         <div class="nav">
           <nav class="nav-wrapper">
             <ul class="nav__list">
@@ -64,11 +72,6 @@
         <!-- /.nav -->
       </div>
       <!-- /.header-wrapper -->
-      <!-- <button class="menu-button menu-button--mobile--hidden">
-        <span class="menu-button__line"></span>
-        <span class="menu-button__line"></span>
-        <span class="menu-button__line"></span>
-      </button> -->
     </header>
     <!-- /.header -->
   </body>
