--- a/webapp/static/sass/_media.sass
+++ b/webapp/static/sass/_media.sass
@@ -19,24 +19,54 @@
       margin-left: 20px
 
 @media (max-width: 768px)
-  // Кнопка перехода в меню
-  // .menu
-  //   &-button
-  //     &--mobile
-  //       &--hidden
-  //         display: flex
-  //         width: 22px
-  //         height: 18px
-  //         padding: 0
-  //         align-items: center
-  //         justify-content: space-between
-  //         flex-direction: column
-  //         border: none
-  //         background-color: transparent
-  //         cursor: pointer
-  //     &__line
-  //       width: 100%
-  //       height: 2px
-  //       background-color: $ruby-color
+  .header
+    &-wrapper
+      max-width: 560px
+      flex-wrap: wrap
 
-// @media (max-width: 576px)
+  .nav
+    position: fixed
+    top: 70px
+    flex-direction: column
+    align-items: start
+    &__list
+      flex-direction: column
+      align-items: start
+    &__item
+      display: flex
+      flex-direction: column
+      margin-right: 0px
+    &__link
+      &__list
+        position: static
+
+  .button
+    &-login
+      margin-top: 20px
+      margin-left: 0px
+
+  // Кнопка перехода в меню
+  .menu
+    &-button
+      &--mobile
+        &--hidden
+          display: flex
+          width: 22px
+          height: 18px
+          padding: 0
+          align-items: center
+          justify-content: space-between
+          flex-direction: column
+          border: none
+          background-color: transparent
+          cursor: pointer
+      &__line
+        width: 100%
+        height: 2px
+        background-color: $ruby-color
+
+@media (max-width: 576px)
+  .header
+    &-wrapper
+      max-width: 560px
+      width: 88%
