Add: box-shadow for header when scrolling page, fixed header + burger menu

--- a/webapp/static/sass/_variables.sass
+++ b/webapp/static/sass/_variables.sass
@@ -10,6 +10,9 @@ $gray-color: #BAB2B5
 // Бежевый (светлый)
 $beige-light: #EEE2DC
 
+// Бежевый 
+$beige: #EDD9CE
+
 // Бежевый (темный)
 $beige-dark: #EDC7B7
 
