--- a/webapp/static/sass/_media.sass
+++ b/webapp/static/sass/_media.sass
@@ -25,10 +25,6 @@
       flex-wrap: wrap
 
   .nav
-    position: fixed
-    top: 70px
-    flex-direction: column
-    align-items: start
     &__list
       flex-direction: column
       align-items: start
@@ -39,6 +35,15 @@
     &__link
       &__list
         position: static
+    &--mobile
+      &--hidden
+        display: none
+      &--visible
+        display: flex
+        position: fixed
+        top: 70px
+        flex-direction: column
+        align-items: start
 
   .button
     &-login
