Add: Show|hide listLinks

--- a/webapp/templates/base.html
+++ b/webapp/templates/base.html
@@ -31,23 +31,25 @@
           <nav class="nav-wrapper">
             <ul class="nav__list">
               <li class="nav__item">
-                <a href="#" class="nav__link level">Уровень</a>
-                <ul class="nav__link__list">
+                <a href="#" class="nav__link" data-category="level">Уровень</a>
+                <ul class="nav__link__list" data-category="level">
                   <li class="nav__link__item">Начинающим</li>
                   <li class="nav__link__item">Опытным</li>
                 </ul>
               </li>
               <li class="nav__item">
-                <a href="#" class="nav__link">Язык</a>
-                <ul class="nav__link__list">
+                <a href="#" class="nav__link" data-category="language">Язык</a>
+                <ul class="nav__link__list" data-category="language">
                   <li class="nav__link__item">Python</li>
                   <li class="nav__link__item">JavaScript</li>
                   <li class="nav__link__item">Пример 1</li>
                 </ul>
               </li>
               <li class="nav__item">
-                <a href="#" class="nav__link">Направление</a>
-                <ul class="nav__link__list">
+                <a href="#" class="nav__link" data-category="theme"
+                  >Направление</a
+                >
+                <ul class="nav__link__list" data-category="theme">
                   <li class="nav__link__item">Синтаксис</li>
                   <li class="nav__link__item">Вэб-разработка</li>
                   <li class="nav__link__item">Пример 1</li>
@@ -55,8 +57,10 @@
                 </ul>
               </li>
               <li class="nav__item">
-                <a href="#" class="nav__link">Издательство</a>
-                <ul class="nav__link__list">
+                <a href="#" class="nav__link" data-category="publisher"
+                  >Издательство</a
+                >
+                <ul class="nav__link__list" data-category="publisher">
                   <li class="nav__link__item">Питер</li>
                   <li class="nav__link__item">Пример 1</li>
                   <li class="nav__link__item">Пример 2</li>
@@ -74,177 +78,6 @@
       <!-- /.header-wrapper -->
     </header>
     <!-- /.header -->
-
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium ipsam
-    blanditiis doloremque, sequi atque optio soluta libero repellat quasi
-    architecto. Blanditiis, sit distinctio! Illo dicta magni incidunt molestias
-    sint odit recusandae! Obcaecati quidem consequuntur ut velit facilis
-    perspiciatis labore fuga illo nam blanditiis id ipsam, est fugit,
-    reprehenderit eaque deleniti quos voluptates itaque tempora dolor nostrum,
-    voluptate sint quas. Quibusdam optio nostrum facere! Recusandae, atque
-    nulla. Temporibus iure numquam officia quis, vel libero esse similique odio
-    fugit adipisci fugiat iste minus sunt ex omnis sit, sint molestiae minima
-    eveniet voluptates voluptatibus ipsum dolorem rerum est? Unde rerum
-    cupiditate laboriosam dolore omnis odio nulla error eveniet quasi voluptas
-    dolorum eius aperiam maiores quas aut sint adipisci deserunt, accusamus
-    aliquid minima. Aut eligendi repellat sed, minima doloribus assumenda
-    architecto perferendis cupiditate asperiores nisi quis dolorum itaque
-    nesciunt consectetur fugit reprehenderit rem tempora culpa? Distinctio
-    expedita velit, cupiditate vero amet molestias facilis iste repellat quasi
-    autem quis placeat itaque reiciendis deleniti, minima soluta modi vitae
-    nemo! Praesentium sapiente eveniet in voluptate iste aut exercitationem
-    blanditiis odio accusantium odit temporibus ex, sequi eaque incidunt debitis
-    quisquam. Ab et minima quam deserunt libero, dicta sit sed! Corrupti illo
-    beatae architecto officiis, autem cumque numquam quae amet optio aliquam
-    asperiores perferendis nobis, quam dignissimos cupiditate placeat, dolores
-    ea incidunt deleniti? Deleniti nisi dolorem saepe in laborum numquam.
-    Accusamus velit error odit vitae harum ex esse pariatur laboriosam placeat
-    veritatis temporibus animi eos minus amet, quam praesentium, quaerat
-    facilis, maiores iure impedit suscipit totam perspiciatis voluptatem
-    molestias. Nemo animi quibusdam officia labore a, aut sed doloremque illo
-    nisi. Animi distinctio accusamus nisi sequi. Earum consectetur animi maxime
-    magni porro incidunt nemo ex ea ut quasi doloribus aperiam ipsa, ipsum
-    laboriosam natus eos rem in neque fugit! Rem ullam suscipit quidem
-    exercitationem incidunt quos aut, ad aspernatur provident corporis. Rerum
-    beatae dolorum fugiat temporibus itaque necessitatibus, repellat vel
-    perferendis voluptatum voluptatibus tenetur dignissimos obcaecati culpa
-    adipisci atque quis praesentium at animi nihil quasi eaque! Iusto, facilis
-    quisquam quasi non maiores rem. Eligendi, modi odit voluptatibus neque a quo
-    ipsa placeat autem explicabo cum aliquam consequuntur saepe ut suscipit
-    eaque, iure, ratione similique esse aperiam laborum reprehenderit dolor
-    debitis. Obcaecati vero, voluptatum atque autem, accusantium libero
-    architecto dolor optio odit iure modi, dolores molestiae? Eveniet ipsa,
-    minus accusamus praesentium, reiciendis, nemo tempora numquam nesciunt ipsam
-    modi nisi earum fuga odit optio voluptates a eos obcaecati quod sit. Maiores
-    eligendi unde commodi soluta quis esse, impedit consequatur sit! Nobis
-    delectus dolores officia suscipit reprehenderit molestias nemo nam. Quasi
-    qui, magni at asperiores impedit laborum explicabo voluptatem quibusdam!
-    Distinctio debitis temporibus maiores est et, necessitatibus cupiditate
-    eveniet reiciendis. Consequatur dignissimos amet error libero? Quaerat
-    dolores voluptatibus, repellat sunt, nam explicabo laboriosam at porro,
-    adipisci optio vero. Aut beatae libero, eaque sequi ab voluptate, expedita,
-    eum vero aspernatur quis dicta accusamus est quam voluptatum sint a!
-    Repellendus soluta nostrum odit quaerat molestiae inventore eaque dolor
-    recusandae consequatur alias, placeat, vel unde dolorum quia voluptate amet
-    officia ipsam laborum incidunt? Et incidunt, quia cupiditate ullam vel ipsam
-    tenetur voluptate nemo aspernatur accusamus enim animi possimus maxime
-    debitis reiciendis ea consequatur optio commodi necessitatibus, iure
-    deleniti? Ut iusto maxime excepturi, minus suscipit distinctio sequi commodi
-    magnam temporibus illo eveniet, ex, dolore doloribus? Rerum rem tempore
-    pariatur perspiciatis totam obcaecati odio vitae molestias recusandae
-    reiciendis, quos architecto ullam in distinctio fugiat ipsa qui voluptas
-    commodi. Alias, recusandae eligendi aliquam officia, aliquid magni
-    dignissimos libero laboriosam iure unde repudiandae voluptatum sint fuga
-    enim totam molestias aut numquam voluptate provident. Asperiores maiores
-    alias neque laboriosam deleniti exercitationem praesentium iste officia
-    voluptates! Officia nostrum ut ex voluptate consectetur officiis
-    consequuntur quod illo, doloremque laboriosam esse voluptatem doloribus
-    quisquam sapiente illum asperiores ea optio molestiae facilis quam modi
-    impedit. Repudiandae odio debitis veniam. Et nulla dolores aliquam! Minus
-    repellat dicta, obcaecati voluptatibus id porro. Magnam ipsum nam quae
-    soluta? Porro unde sequi vel quos rem nostrum voluptatum! Eveniet dolor
-    sapiente quos sequi consequatur sit laborum architecto magnam vero dicta. Ut
-    a ex nihil perspiciatis explicabo laudantium deserunt quam reprehenderit
-    atque maiores quaerat eaque aliquid quidem veniam impedit itaque vitae
-    eveniet, sint doloremque! Ullam magni recusandae accusantium soluta porro ut
-    dicta optio corporis voluptatum iusto at id voluptas inventore sint commodi
-    quas voluptates illo aliquid reiciendis magnam, totam iure sit beatae illum.
-    Eum maxime tenetur sequi maiores deserunt quisquam aspernatur fuga. Omnis,
-    fugiat aliquid perspiciatis ex officia aut? A iste repellat architecto
-    suscipit est nulla veniam rem illo, accusantium neque ipsum explicabo eum
-    natus qui! Ut voluptatibus molestiae enim quo doloribus? Quos, ad dolorem
-    assumenda dignissimos quae possimus accusantium repellendus labore, tempore
-    praesentium omnis adipisci necessitatibus voluptas tempora quidem aperiam
-    aut fugiat. Dolorem obcaecati itaque sit dolores quae, illum cupiditate
-    mollitia ab animi suscipit, neque repellat eius deserunt delectus modi quo.
-    Quos temporibus quia ut culpa provident consequuntur quibusdam repellendus
-    quis eum harum laborum, autem quidem, perspiciatis ex voluptates eos
-    expedita. Explicabo error cupiditate sunt magni iste ullam, ut repellendus
-    reiciendis. Harum laudantium adipisci ad nam iste repellat doloremque et,
-    cumque, ea culpa obcaecati sequi quis possimus! Molestiae placeat doloribus
-    consectetur nulla excepturi a mollitia, reiciendis quia porro unde,
-    repellendus similique provident eaque architecto suscipit. Ullam optio
-    dolorum pariatur aspernatur mollitia, ducimus eveniet tempore expedita
-    itaque consequatur iste magnam quas sint corrupti saepe, iure hic ad, velit
-    ipsum! Ipsam suscipit recusandae ex quos porro provident. Enim ratione
-    praesentium nesciunt non assumenda tenetur. Nihil adipisci molestiae
-    eligendi corrupti, et dolore, ab distinctio quis ex recusandae accusantium
-    illo optio enim esse beatae maiores animi rerum fuga eum eos sunt itaque.
-    Quaerat, et quidem esse hic exercitationem culpa nulla fuga nobis
-    praesentium aliquam maxime officiis ad sint itaque ducimus a, dolore totam.
-    Obcaecati, facere. Alias ad possimus quisquam cupiditate facere. Qui
-    consequuntur, magni repudiandae ipsa iusto ea deserunt saepe temporibus
-    maiores neque, delectus deleniti aut, ad minima repellat corrupti tenetur.
-    Dicta nulla fugiat quis illum eveniet exercitationem perspiciatis rerum
-    magnam cum, dolores autem quod molestias soluta nostrum sequi debitis
-    distinctio ipsa delectus officiis hic iusto incidunt, explicabo officia
-    amet? Illo deserunt ipsam debitis? Lorem ipsum dolor sit amet consectetur
-    adipisicing elit. Accusantium ipsam blanditiis doloremque, sequi atque optio
-    soluta libero repellat quasi architecto. Blanditiis, sit distinctio! Illo
-    dicta magni incidunt molestias sint odit recusandae! Obcaecati quidem
-    consequuntur ut velit facilis perspiciatis labore fuga illo nam blanditiis
-    id ipsam, est fugit, reprehenderit eaque deleniti quos voluptates itaque
-    tempora dolor nostrum, voluptate sint quas. Quibusdam optio nostrum facere!
-    Recusandae, atque nulla. Temporibus iure numquam officia quis, vel libero
-    esse similique odio fugit adipisci fugiat iste minus sunt ex omnis sit, sint
-    molestiae minima eveniet voluptates voluptatibus ipsum dolorem rerum est?
-    Unde rerum cupiditate laboriosam dolore omnis odio nulla error eveniet quasi
-    voluptas dolorum eius aperiam maiores quas aut sint adipisci deserunt,
-    accusamus aliquid minima. Aut eligendi repellat sed, minima doloribus
-    assumenda architecto perferendis cupiditate asperiores nisi quis dolorum
-    itaque nesciunt consectetur fugit reprehenderit rem tempora culpa?
-    Distinctio expedita velit, cupiditate vero amet molestias facilis iste
-    repellat quasi autem quis placeat itaque reiciendis deleniti, minima soluta
-    modi vitae nemo! Praesentium sapiente eveniet in voluptate iste aut
-    exercitationem blanditiis odio accusantium odit temporibus ex, sequi eaque
-    incidunt debitis quisquam. Ab et minima quam deserunt libero, dicta sit sed!
-    Corrupti illo beatae architecto officiis, autem cumque numquam quae amet
-    optio aliquam asperiores perferendis nobis, quam dignissimos cupiditate
-    placeat, dolores ea incidunt deleniti? Deleniti nisi dolorem saepe in
-    laborum numquam. Accusamus velit error odit vitae harum ex esse pariatur
-    laboriosam placeat veritatis temporibus animi eos minus amet, quam
-    praesentium, quaerat facilis, maiores iure impedit suscipit totam
-    perspiciatis voluptatem molestias. Nemo animi quibusdam officia labore a,
-    aut sed doloremque illo nisi. Animi distinctio accusamus nisi sequi. Earum
-    consectetur animi maxime magni porro incidunt nemo ex ea ut quasi doloribus
-    aperiam ipsa, ipsum laboriosam natus eos rem in neque fugit! Rem ullam
-    suscipit quidem exercitationem incidunt quos aut, ad aspernatur provident
-    corporis. Rerum beatae dolorum fugiat temporibus itaque necessitatibus,
-    repellat vel perferendis voluptatum voluptatibus tenetur dignissimos
-    obcaecati culpa adipisci atque quis praesentium at animi nihil quasi eaque!
-    Iusto, facilis quisquam quasi non maiores rem. Eligendi, modi odit
-    voluptatibus neque a quo ipsa placeat autem explicabo cum aliquam
-    consequuntur saepe ut suscipit eaque, iure, ratione similique esse aperiam
-    laborum reprehenderit dolor debitis. Obcaecati vero, voluptatum atque autem,
-    accusantium libero architecto dolor optio odit iure modi, dolores molestiae?
-    Eveniet ipsa, minus accusamus praesentium, reiciendis, nemo tempora numquam
-    nesciunt ipsam modi nisi earum fuga odit optio voluptates a eos obcaecati
-    quod sit. Maiores eligendi unde commodi soluta quis esse, impedit
-    consequatur sit! Nobis delectus dolores officia suscipit reprehenderit
-    molestias nemo nam. Quasi qui, magni at asperiores impedit laborum explicabo
-    voluptatem quibusdam! Distinctio debitis temporibus maiores est et,
-    necessitatibus cupiditate eveniet reiciendis. Consequatur dignissimos amet
-    error libero? Quaerat dolores voluptatibus, repellat sunt, nam explicabo
-    laboriosam at porro, adipisci optio vero. Aut beatae libero, eaque sequi ab
-    voluptate, expedita, eum vero aspernatur quis dicta accusamus est quam
-    voluptatum sint a! Repellendus soluta nostrum odit quaerat molestiae
-    inventore eaque dolor recusandae consequatur alias, placeat, vel unde
-    dolorum quia voluptate amet officia ipsam laborum incidunt? Et incidunt,
-    quia cupiditate ullam vel ipsam tenetur voluptate nemo aspernatur accusamus
-    enim animi possimus maxime debitis reiciendis ea consequatur optio commodi
-    necessitatibus, iure deleniti? Ut iusto maxime excepturi, minus suscipit
-    distinctio sequi commodi magnam temporibus illo eveniet, ex, dolore
-    doloribus? Rerum rem tempore pariatur perspiciatis totam obcaecati odio
-    vitae molestias recusandae reiciendis, quos architecto ullam in distinctio
-    fugiat ipsa qui voluptas commodi. Alias, recusandae eligendi aliquam
-    officia, aliquid magni dignissimos libero laboriosam iure unde repudiandae
-    voluptatum sint fuga enim totam molestias aut numquam voluptate provident.
-    Asperiores maiores alias neque laboriosam deleniti exercitationem
-    praesentium iste officia voluptates! Officia nostrum ut ex voluptate
-    consectetur officiis consequuntur quod illo, doloremque laboriosam esse
-    voluptatem doloribus quisquam sapiente illum asperiores ea optio molestiae
-    facilis quam modi impedit. Repudiandae odio debitis veniam. Et nulla dolores
-    aliquam! Minus
 
     <script src=" {{ url_for('static', filename='js/jquery-3.6.0.min.js') }} "></script>
     <script src="{{ url_for('static', filename='js/main.js') }}"></script>
