--- a/webapp/static/sass/blocks/_header.sass
+++ b/webapp/static/sass/blocks/_header.sass
@@ -48,6 +48,7 @@
     text-decoration: none
     color: $ruby-color
     &__list
+      display: none
       position: fixed
       top: 70px
     &__item
