--- a/webapp/templates/base.html
+++ b/webapp/templates/base.html
@@ -18,7 +18,7 @@
     <header class="header">
       <div class="header-wrapper">
         <div class="menu">
-          <a href="#" class="menu-logo">ProgrammigBooks</a>
+          <a href="#" class="menu-logo">DeveloperBooks</a>
           <!-- /.logo -->
           <button class="menu-button menu-button--mobile--hidden">
             <span class="menu-button__line"></span>
@@ -32,39 +32,65 @@
             <ul class="nav__list">
               <li class="nav__item">
                 <a href="#" class="nav__link" data-category="level">Уровень</a>
-                <ul class="nav__link__list" data-category="level">
-                  <li class="nav__link__item">Начинающим</li>
-                  <li class="nav__link__item">Опытным</li>
+                <ul class="dropdown-menu" data-category="level">
+                  <li class="dropdown-menu__item">
+                    <a href="#" class="dropdown-menu__link">Начинающим</a>
+                  </li>
+                  <li class="dropdown-menu__item">
+                    <a href="#" class="dropdown-menu__link">Опытным</a>
+                  </li>
                 </ul>
               </li>
               <li class="nav__item">
                 <a href="#" class="nav__link" data-category="language">Язык</a>
-                <ul class="nav__link__list" data-category="language">
-                  <li class="nav__link__item">Python</li>
-                  <li class="nav__link__item">JavaScript</li>
-                  <li class="nav__link__item">Пример 1</li>
+                <ul class="dropdown-menu" data-category="language">
+                  <li class="dropdown-menu__item">
+                    <a href="#" class="dropdown-menu__link">Python</a>
+                  </li>
+                  <li class="dropdown-menu__item">
+                    <a href="#" class="dropdown-menu__link">JavaScript</a>
+                  </li>
+                  <li class="dropdown-menu__item">
+                    <a href="#" class="dropdown-menu__link">Пример</a>
+                  </li>
                 </ul>
               </li>
               <li class="nav__item">
                 <a href="#" class="nav__link" data-category="theme"
                   >Направление</a
                 >
-                <ul class="nav__link__list" data-category="theme">
-                  <li class="nav__link__item">Синтаксис</li>
-                  <li class="nav__link__item">Вэб-разработка</li>
-                  <li class="nav__link__item">Пример 1</li>
-                  <li class="nav__link__item">Пример 2</li>
+                <ul class="dropdown-menu" data-category="theme">
+                  <li class="dropdown-menu__item">
+                    <a href="#" class="dropdown-menu__link">Синтаксис</a>
+                  </li>
+                  <li class="dropdown-menu__item">
+                    <a href="#" class="dropdown-menu__link">Вэб-разработка</a>
+                  </li>
+                  <li class="dropdown-menu__item">
+                    <a href="#" class="dropdown-menu__link">Пример</a>
+                  </li>
+                  <li class="dropdown-menu__item">
+                    <a href="#" class="dropdown-menu__link">Пример</a>
+                  </li>
                 </ul>
               </li>
               <li class="nav__item">
                 <a href="#" class="nav__link" data-category="publisher"
                   >Издательство</a
                 >
-                <ul class="nav__link__list" data-category="publisher">
-                  <li class="nav__link__item">Питер</li>
-                  <li class="nav__link__item">Пример 1</li>
-                  <li class="nav__link__item">Пример 2</li>
-                  <li class="nav__link__item">Пример 3</li>
+                <ul class="dropdown-menu" data-category="publisher">
+                  <li class="dropdown-menu__item">
+                    <a href="#" class="dropdown-menu__link">Питер</a>
+                  </li>
+                  <li class="dropdown-menu__item">
+                    <a href="#" class="dropdown-menu__link">Пример</a>
+                  </li>
+                  <li class="dropdown-menu__item">
+                    <a href="#" class="dropdown-menu__link">Пример</a>
+                  </li>
+                  <li class="dropdown-menu__item">
+                    <a href="#" class="dropdown-menu__link">Пример</a>
+                  </li>
                 </ul>
               </li>
             </ul>
