--- a/webapp/static/sass/_media.sass
+++ b/webapp/static/sass/_media.sass
@@ -32,18 +32,20 @@
       display: flex
       flex-direction: column
       margin-right: 0px
-    &__link
-      &__list
-        position: static
+      margin-bottom: 10px
     &--mobile
       &--hidden
         display: none
       &--visible
         display: flex
         position: fixed
-        top: 70px
+        top: 63px
         flex-direction: column
         align-items: start
+
+  .dropdown
+    &-menu
+      position: static
 
   .button
     &-login
