Add: styles for mobile nav menu

--- a/webapp/static/sass/blocks/_header.sass
+++ b/webapp/static/sass/blocks/_header.sass
@@ -33,8 +33,9 @@
         display: none
 
 .nav
-  display: flex
-  align-items: center
+  &-container
+    display: flex
+    align-items: center
   &__list
     display: flex
     justify-content: space-between
