--- a/webapp/static/sass/_media.sass
+++ b/webapp/static/sass/_media.sass
@@ -22,9 +22,12 @@
   .header
     &-wrapper
       max-width: 560px
+      width: 88%
       flex-wrap: wrap
 
   .nav
+    &-wrapper
+      width: 100%
     &__list
       flex-direction: column
       align-items: start
@@ -33,19 +36,37 @@
       flex-direction: column
       margin-right: 0px
       margin-bottom: 10px
+      width: 100%
+    &__link
+      margin-bottom: 5px
     &--mobile
       &--hidden
         display: none
       &--visible
+        padding: 20px 0px 30px 0px
         display: flex
         position: fixed
         top: 63px
-        flex-direction: column
-        align-items: start
+        max-width: 100vw
+        left: 0px
+        right: 0px
+        z-index: 99
+        background-color: $beige-light
+    &-container
+      max-width: 560px
+      width: 88%
+      flex-direction: column
+      align-items: start
+      margin: auto
 
   .dropdown
     &-menu
       position: static
+      padding: 10px 15px 0px 15px
+      box-shadow: none
+      border: none
+      background-color: transparent
+      border-radius: none
 
   .button
     &-login
@@ -72,8 +93,4 @@
         height: 2px
         background-color: $ruby-color
 
-@media (max-width: 576px)
-  .header
-    &-wrapper
-      max-width: 560px
-      width: 88%
+// @media (max-width: 576px)
