--- a/webapp/templates/base.html
+++ b/webapp/templates/base.html
@@ -28,76 +28,83 @@
         </div>
         <!-- /.logo-menu -->
         <div class="nav nav--mobile--hidden">
-          <nav class="nav-wrapper">
-            <ul class="nav__list">
-              <li class="nav__item">
-                <a href="#" class="nav__link" data-category="level">Уровень</a>
-                <ul class="dropdown-menu" data-category="level">
-                  <li class="dropdown-menu__item">
-                    <a href="#" class="dropdown-menu__link">Начинающим</a>
-                  </li>
-                  <li class="dropdown-menu__item">
-                    <a href="#" class="dropdown-menu__link">Опытным</a>
-                  </li>
-                </ul>
-              </li>
-              <li class="nav__item">
-                <a href="#" class="nav__link" data-category="language">Язык</a>
-                <ul class="dropdown-menu" data-category="language">
-                  <li class="dropdown-menu__item">
-                    <a href="#" class="dropdown-menu__link">Python</a>
-                  </li>
-                  <li class="dropdown-menu__item">
-                    <a href="#" class="dropdown-menu__link">JavaScript</a>
-                  </li>
-                  <li class="dropdown-menu__item">
-                    <a href="#" class="dropdown-menu__link">Пример</a>
-                  </li>
-                </ul>
-              </li>
-              <li class="nav__item">
-                <a href="#" class="nav__link" data-category="theme"
-                  >Направление</a
-                >
-                <ul class="dropdown-menu" data-category="theme">
-                  <li class="dropdown-menu__item">
-                    <a href="#" class="dropdown-menu__link">Синтаксис</a>
-                  </li>
-                  <li class="dropdown-menu__item">
-                    <a href="#" class="dropdown-menu__link">Вэб-разработка</a>
-                  </li>
-                  <li class="dropdown-menu__item">
-                    <a href="#" class="dropdown-menu__link">Пример</a>
-                  </li>
-                  <li class="dropdown-menu__item">
-                    <a href="#" class="dropdown-menu__link">Пример</a>
-                  </li>
-                </ul>
-              </li>
-              <li class="nav__item">
-                <a href="#" class="nav__link" data-category="publisher"
-                  >Издательство</a
-                >
-                <ul class="dropdown-menu" data-category="publisher">
-                  <li class="dropdown-menu__item">
-                    <a href="#" class="dropdown-menu__link">Питер</a>
-                  </li>
-                  <li class="dropdown-menu__item">
-                    <a href="#" class="dropdown-menu__link">Пример</a>
-                  </li>
-                  <li class="dropdown-menu__item">
-                    <a href="#" class="dropdown-menu__link">Пример</a>
-                  </li>
-                  <li class="dropdown-menu__item">
-                    <a href="#" class="dropdown-menu__link">Пример</a>
-                  </li>
-                </ul>
-              </li>
-            </ul>
-            <!-- /.nav__list -->
-          </nav>
-          <!-- /.nav-wrapper -->
-          <button class="button-login">Войти</button>
+          <div class="nav-container">
+            <nav class="nav-wrapper">
+              <ul class="nav__list">
+                <li class="nav__item">
+                  <a href="#" class="nav__link" data-category="level"
+                    >Уровень</a
+                  >
+                  <ul class="dropdown-menu" data-category="level">
+                    <li class="dropdown-menu__item">
+                      <a href="#" class="dropdown-menu__link">Начинающим</a>
+                    </li>
+                    <li class="dropdown-menu__item">
+                      <a href="#" class="dropdown-menu__link">Опытным</a>
+                    </li>
+                  </ul>
+                </li>
+                <li class="nav__item">
+                  <a href="#" class="nav__link" data-category="language"
+                    >Язык</a
+                  >
+                  <ul class="dropdown-menu" data-category="language">
+                    <li class="dropdown-menu__item">
+                      <a href="#" class="dropdown-menu__link">Python</a>
+                    </li>
+                    <li class="dropdown-menu__item">
+                      <a href="#" class="dropdown-menu__link">JavaScript</a>
+                    </li>
+                    <li class="dropdown-menu__item">
+                      <a href="#" class="dropdown-menu__link">Пример</a>
+                    </li>
+                  </ul>
+                </li>
+                <li class="nav__item">
+                  <a href="#" class="nav__link" data-category="theme"
+                    >Направление</a
+                  >
+                  <ul class="dropdown-menu" data-category="theme">
+                    <li class="dropdown-menu__item">
+                      <a href="#" class="dropdown-menu__link">Синтаксис</a>
+                    </li>
+                    <li class="dropdown-menu__item">
+                      <a href="#" class="dropdown-menu__link">Вэб-разработка</a>
+                    </li>
+                    <li class="dropdown-menu__item">
+                      <a href="#" class="dropdown-menu__link">Пример</a>
+                    </li>
+                    <li class="dropdown-menu__item">
+                      <a href="#" class="dropdown-menu__link">Пример</a>
+                    </li>
+                  </ul>
+                </li>
+                <li class="nav__item">
+                  <a href="#" class="nav__link" data-category="publisher"
+                    >Издательство</a
+                  >
+                  <ul class="dropdown-menu" data-category="publisher">
+                    <li class="dropdown-menu__item">
+                      <a href="#" class="dropdown-menu__link">Питер</a>
+                    </li>
+                    <li class="dropdown-menu__item">
+                      <a href="#" class="dropdown-menu__link">Пример</a>
+                    </li>
+                    <li class="dropdown-menu__item">
+                      <a href="#" class="dropdown-menu__link">Пример</a>
+                    </li>
+                    <li class="dropdown-menu__item">
+                      <a href="#" class="dropdown-menu__link">Пример</a>
+                    </li>
+                  </ul>
+                </li>
+              </ul>
+              <!-- /.nav__list -->
+            </nav>
+            <!-- /.nav-wrapper -->
+            <button class="button-login">Войти</button>
+          </div>
+          <!-- /.nav-container -->
         </div>
         <!-- /.nav -->
       </div>
