Add: header animation click

--- a/webapp/static/sass/_hovers.sass
+++ b/webapp/static/sass/_hovers.sass
@@ -1,1 +1,31 @@
-// @media (min-width: 992px)
+@media (min-width: 992px)
+  .menu
+    &-logo
+      &:hover
+        color: $blue-color
+      &:active 
+        color: $ruby-color
+
+  .nav
+    &__link
+      &:hover
+        color: $blue-color
+      &:active 
+        color: $ruby-color
+
+  .button
+    &-login
+      &:hover
+        color: $blue-color
+        border-color: $blue-color
+      &:active 
+        color: $ruby-color
+        border-color: $ruby-color
+
+  .dropdown
+    &-menu
+      &__link
+        &:hover
+          color: $blue-color
+        &:active 
+          color: $ruby-color
