--- a/webapp/static/sass/_variables.sass
+++ b/webapp/static/sass/_variables.sass
@@ -1,1 +1,23 @@
-// Тут будут переменные для SaSS/CSS
+// Рубиновый
+$ruby-color: #AC3B61
+
+// Синий
+$blue-color: #123C69
+
+// Серый
+$gray-color: #BAB2B5
+
+// Бежевый (светлый)
+$beige-light: #EEE2DC
+
+// Бежевый 
+$beige: #EDD9CE
+
+// Бежевый (темный)
+$beige-dark: #EDC7B7
+
+// Open Sans 300, 400
+$paragraph-font: 'Open Sans', sans-serif
+
+// Advent Pro 600
+$head-font: 'Advent Pro', sans-serif
