--- a/webapp/static/sass/blocks/_header.sass
+++ b/webapp/static/sass/blocks/_header.sass
@@ -1,2 +1,90 @@
-h1
-  color: red
+.header
+  background-color: $beige-light
+  position: fixed
+  left: 0
+  top: 0
+  right: 0
+  z-index: 99
+  &-wrapper
+    max-width: 1140px
+    margin: auto
+    padding: 20px 0px 15px 0px
+    display: flex
+    justify-content: space-between
+    align-items: center
+  
+.menu
+  display: flex
+  justify-content: space-between
+  align-items: center
+  width: 100%
+  &-logo
+    font-family: $head-font
+    font-size: 24px
+    text-decoration: none
+    text-transform: uppercase
+    font-weight: 600
+    color: $ruby-color
+    cursor: pointer
+  // Мобильное меню
+  &-button
+    &--mobile
+      &--hidden
+        display: none
+
+.nav
+  &-container
+    display: flex
+    align-items: center
+  &__list
+    display: flex
+    justify-content: space-between
+    align-items: center
+  &__item
+    margin-right: 40px
+  &__link
+    font-family: $paragraph-font
+    font-size: 17px
+    font-weight: 400
+    text-decoration: none
+    color: $ruby-color
+
+.dropdown
+  &-menu
+    display: none
+    position: fixed
+    top: 70px
+    z-index: 99
+    padding: 10px 15px 0px 15px
+    box-shadow: 4px 4px 6px -1px $gray-color, -4px 4px 6px -1px $gray-color
+    border: 1px solid $gray-color
+    background-color: $beige-light
+    border-radius: 0px 0px 5px 5px
+    &__item
+      margin-bottom: 10px
+    &__link
+      font-family: $paragraph-font
+      font-size: 15px
+      font-weight: 300
+      color: $ruby-color
+      text-decoration: none
+    
+.button
+  &-login
+    margin-left: 40px
+    max-width: 80px
+    padding: 5px 10px
+    border: 2px solid $ruby-color
+    border-radius: 8px
+    background-color: transparent
+    font-family: $paragraph-font
+    font-size: 18px
+    font-weight: 400
+    text-align: center
+    color: $ruby-color
+    cursor: pointer
+    overflow: hidden
+    text-overflow: ellipsis
+
+.scroll
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5)
