--- a/webapp/static/sass/style.sass
+++ b/webapp/static/sass/style.sass
@@ -10,6 +10,9 @@
 // Импорт секции Header
 @import "blocks/_header"
 
+// Импорт секции Книги (Book)
+@import "blocks/_books"
+
 // Импорт секции Footer
 @import "blocks/_footer"
 
