Refactoring: authors block

--- a/webapp/static/sass/blocks/_books.sass
+++ b/webapp/static/sass/blocks/_books.sass
@@ -47,10 +47,16 @@
     margin-bottom: 15px
     overflow: hidden
     text-overflow: ellipsis
+  &-authors
+    display: flex
+    flex-direction: row
+    justify-content: start
+    align-items: center
   &-author
     display: block
     height: 16px
     margin-bottom: 15px
+    margin-right: 5px
   &-publisher
     height: 16px
     margin-bottom: 15px
